--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <img src="../odin-recipes/odin-recipes-images/or-logo.gif" alt="Egg cooking GIF by 鹈鹂 夏 from Pixabay" width="150">
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/shiitake-breakfast-sandwich.html">Shiitake Breakfast Sandwich</a></li>
-        <li><a href="recipes/pansit-canton.html">Pansit Canton</a></li>
-        <li><a href="recipes/honey-chimichurri-tofu.html">Honey Chimichurri Tofu</a></li>
+        <li><a href="./recipes/shiitake-breakfast-sandwich.html">Shiitake Breakfast Sandwich</a></li>
+        <li><a href="./recipes/pansit-canton.html">Pansit Miki Guisado</a></li>
+        <li><a href="./recipes/honey-chimichurri-tofu.html">Honey Chimichurri Tofu</a></li>
     </ul>
         <br>
         <br>
