Finish writing recipe

--- a/recipes/shiitake-breakfast-sandwich.html
+++ b/recipes/shiitake-breakfast-sandwich.html
@@ -3,14 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shiitake Breakfast Sandwich | Odin Recipes</title>
 </head>
 <body>
     <p><a href="../index.html">Odin Recipes</a> &gt; Shiitake Breakfast Sandwich</p>
-        <br>
     <h1>Shiitake Breakfast Sandwich</h1>
-
-    <p>Back to top</p>
-    <p>Home</p>
+<img src="https://i.imgur.com/lz3hYnM.jpeg" alt="Shiitake Breakfast Sandwich">
+<h3><em>Some buttery umami goodness to greet the day.</em></h3>
+<p>Once saw an IG reel about a sandwich like this and then couldn't for the life of me find it again. Lost to the ravages of time. So let's improvise with what we have in the fridge.</p>
+<p>This bright, buttery, cheesy, umami sandwich pairs really well with honey citron tea and extra cherry tomatoes on the side.</p>
+<p><strong>Prep:</strong> 15 mins &nbsp;&nbsp; <strong>Cook:</strong> 20 mins &nbsp;&nbsp; <strong>Servings:</strong> 2</p>
+<br>
+<h2>Ingredients</h2>
+<ul>
+    <li>4 slices whole wheat bread with the crusts removed</li>
+    <li>2 tablespoons unsalted butter</li>
+    <li>2 eggs</li>
+    <li>6 pieces dried shiitake</li>
+    <li>6 cherry tomatoes</li>
+    <li>Grated parmesan</li>
+    <li>Olive oil</li>
+    <li>Kewpie mayo</li>
+    <li>Sriracha</li>
+    <li>Salt</li>
+    <li>Black pepper</li>
+    
+</ul>
+<br>
+<h2>Steps</h2>
+<ol>
+    <li>In a bowl, rehydrate the shiitake with boiled water.</li>
+    <li>Meanwhile, slice your cherry tomatoes, and beat each egg in a bowl of its own and mix in some Kewpie mayo.</li>
+    <li>When the shiitake are soft enough, slice them thinly and sauté on high heat in olive oil. Season lightly with salt and pepper. Set aside.</li>
+    <li>Melt some butter in the pan on low heat. Toast the slices of whole wheat bread until almost slightly burnt on both sides. Set aside.</li>
+    <li>Coat the pan with olive oil. Pour in one beaten egg, and place half of the shiitake all over the egg. When the shiitake omelette is three-fourths cooked, put two slices of bread on it side by side. Make sure the omelette's cooked before you flip it along with the slices of bread.</li>
+    <li>On the flipside, layer some cherry tomatoes, sprinkle some grated parmesan, and drizzle enough sriracha to wake you up.</li>
+    <li>Fold the sandwich. Repeat for the other serving. Enjoy!</li>
+</ol>
+<br>
+<img src="../odin-recipes-images/nanyang-style-3706-256.gif" alt="Nanyang Style 3706 356 GIF by 鹈鹂 夏 on Pixabay" width="300">
+<br>
+<br>
+<br>
+<h3>See other recipes</h3>
+<figure>
+    <a href="./pansit-miki-guisado.html"><img src="https://i.imgur.com/RDOwbt1.jpeg" alt="Pansit Miki Guisado" width="100"></a>
+    <figcaption>Pansit Miki Guisado</figcaption>
+</figure>
+<figure>
+    <a href="./honey-chimichurri-tofu.html"><img src="https://i.imgur.com/qSTjmOs.jpeg" alt="Honey Chimichurri Tofu" width="100"></a>
+    <figcaption>Honey Chimichurri Tofu</figcaption>
+</figure>
+<br>
+<br>
+<p><a href="../index.html">HOME</a>&nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="https://github.com/abbyguous/odin-recipes/blob/main/README.md" target="_blank" rel="noopener noreferrer">ABOUT</a>&nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="mailto:abbyguous@gmail.com?subject=Thoughts%20on%20your%20Odin%20Recipes%20site">DROP A NOTE</a>&nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="https://www.theodinproject.com/about">THE ODIN PROJECT</a></p>
 </body>
 </html>
