--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
     <img src="../odin-recipes/odin-recipes-images/or-logo.gif" alt="Egg cooking GIF by 鹈鹂 夏 from Pixabay" width="150">
     <h1>Odin Recipes</h1>
+    <p><em>Three recipes to get you through the day!</em></p>
+    <br>
     <ul>
-        <li><a href="./recipes/shiitake-breakfast-sandwich.html">Shiitake Breakfast Sandwich</a></li>
-        <li><a href="./recipes/pansit-canton.html">Pansit Miki Guisado</a></li>
-        <li><a href="./recipes/honey-chimichurri-tofu.html">Honey Chimichurri Tofu</a></li>
+        <li><strong>BREAKFAST: </strong><a href="./recipes/shiitake-breakfast-sandwich.html">Shiitake Breakfast Sandwich</a></li>
+        <li><strong>LUNCH: </strong><a href="./recipes/pansit-miki-guisado.html">Pansit Miki Guisado</a></li>
+        <li><strong>DINNER: </strong><a href="./recipes/honey-chimichurri-tofu.html">Honey Chimichurri Tofu</a></li>
     </ul>
+        <br>
         <br>
         <br>
         <p><a href="https://github.com/abbyguous/odin-recipes/blob/main/README.md" target="_blank" rel="noopener noreferrer">ABOUT</a>&nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="mailto:abbyguous@gmail.com?subject=Thoughts%20on%20your%20Odin%20Recipes%20site">DROP A NOTE</a>&nbsp;&nbsp;&#8226;&nbsp;&nbsp;<a href="https://www.theodinproject.com/about">THE ODIN PROJECT</a></p>
