Finish honey cilantro chimichurri tofu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><strong>BREAKFAST: </strong><a href="./recipes/shiitake-breakfast-sandwich.html">Shiitake Breakfast Sandwich</a></li>
         <li><strong>LUNCH: </strong><a href="./recipes/pansit-miki-guisado.html">Pansit Miki Guisado</a></li>
-        <li><strong>DINNER: </strong><a href="./recipes/honey-chimichurri-tofu.html">Honey Chimichurri Tofu</a></li>
+        <li><strong>DINNER: </strong><a href="./recipes/honey-cilantro-chimichurri-tofu.html">Honey Cilantro Chimichurri Tofu</a></li>
     </ul>
         <br>
         <br>
