--- a/recipes/shiitake-breakfast-sandwich.html
+++ b/recipes/shiitake-breakfast-sandwich.html
@@ -51,8 +51,8 @@
     <figcaption>Pansit Miki Guisado</figcaption>
 </figure>
 <figure>
-    <a href="./honey-chimichurri-tofu.html"><img src="https://i.imgur.com/qSTjmOs.jpeg" alt="Honey Chimichurri Tofu" width="100"></a>
-    <figcaption>Honey Chimichurri Tofu</figcaption>
+    <a href="./honey-cilantro-chimichurri-tofu.html"><img src="https://i.imgur.com/qSTjmOs.jpeg" alt="Honey Cilantro Chimichurri Tofu" width="100"></a>
+    <figcaption>Honey Cilantro Chimichurri Tofu</figcaption>
 </figure>
 <br>
 <br>
