--- a/recipes/pansit-miki-guisado.html
+++ b/recipes/pansit-miki-guisado.html
@@ -47,8 +47,8 @@
     <figcaption>Shiitake Breakfast Sandwich</figcaption>
 </figure>
 <figure>
-    <a href="./honey-chimichurri-tofu.html"><img src="https://i.imgur.com/qSTjmOs.jpeg" alt="Honey Chimichurri Tofu" width="100"></a>
-    <figcaption>Honey Chimichurri Tofu</figcaption>
+    <a href="./honey-cilantro-chimichurri-tofu.html"><img src="https://i.imgur.com/qSTjmOs.jpeg" alt="Honey Cilantro Chimichurri Tofu" width="100"></a>
+    <figcaption>Honey Cilantro Chimichurri Tofu</figcaption>
 </figure>
 <br>
 <br>
